# lambda-rs

./: Cargo.toml  LICENSE  README.md
assets/: image_data_url.txt
src/: boolean.rs  boolean_algebra.rs  datatypes.rs  lib.rs  macros.rs  math.rs  primitives.rs
tests/: static-test.rs
